--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,11 +7,9 @@ authors = ["diohabara <diohabara@gmail.com>"]
 [tool.poetry.dependencies]
 python = "^3.9"
 pytest = "^6.2.4"
-pysen = "^0.9.1"
 
 [tool.poetry.dev-dependencies]
-black = {version = "^21.7b0", allow-prereleases = true}
-
+pysen = { version = "0.9.1", extras = ["lint"] }
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
@@ -28,5 +26,4 @@ mypy_preset = "strict"
 line_length = 88
 py_version = "py37"
 [[tool.pysen.lint.mypy_targets]]
-  paths = ["."]
-
+paths = ["."]
