--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ authors = ["diohabara <diohabara@gmail.com>"]
 [tool.poetry.dependencies]
 python = "^3.9"
 pytest = "^6.2.4"
+argparse = "^1.4.0"
 
 [tool.poetry.dev-dependencies]
 pysen = { version = "0.9.1", extras = ["lint"] }
